// Vitest Snapshot v1

exports[`Asciidoc pages > renders correctly - installation slug 1`] = `
<main>
  <title>
    Asciidoc Page title | Adoptium
  </title>
  <meta
    content="Sample Description"
    name="description"
  />
  <meta
    content="Asciidoc Page title | Adoptium"
    name="og:title"
  />
  <meta
    content="Sample Description"
    name="og:description"
  />
  <meta
    content="website"
    name="og:type"
  />
  <meta
    content="https://adoptium.net/images/social-image.png"
    name="og:image"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="@adoptium"
    name="twitter:site"
  />
  <meta
    content="https://adoptium.net/images/social-image.png"
    name="twitter:image"
  />
  <meta
    content="@adoptium"
    name="twitter:creator"
  />
  <meta
    content="Asciidoc Page title | Adoptium"
    name="twitter:title"
  />
  <meta
    content="Sample Description"
    name="twitter:description"
  />
  <link
    href="//www.eclipse.org/eclipse.org-common/themes/solstice/public/stylesheets/vendor/cookieconsent/cookieconsent.min.css"
    rel="stylesheet"
    type="text/css"
  />
  <script
    src="//www.eclipse.org/eclipse.org-common/themes/solstice/public/javascript/vendor/cookieconsent/default.min.js"
  />
  <section
    class="py-5 container"
  >
    <div
      class="asciidoc-container container-adoc"
      id="asciidoc-container"
    >
      <div
        class="asciidoc"
      >
        <h1
          class="pb-4 fw-light text-center"
        >
          Asciidoc Page title
        </h1>
        <section
          class="adopt-demo-container hide-on-mobile my-5"
        >
          <div
            class="adopt-demo mx-auto"
          >
            <div
              class="install"
            >
              <div
                class="react-tabs"
                data-rttabs="true"
              >
                <div
                  class="install__header"
                >
                  <div
                    class="install__header-circles"
                  >
                    <div
                      class="install__header-grey-circle red"
                    />
                    <div
                      class="install__header-grey-circle yellow"
                    />
                    <div
                      class="install__header-grey-circle green"
                    />
                  </div>
                  <div
                    class="install__header-text"
                  >
                    bash
                  </div>
                </div>
                <ul
                  class="react-tabs__tab-list"
                  role="tablist"
                >
                  <li
                    aria-controls="panel:r0:0"
                    aria-disabled="false"
                    aria-selected="true"
                    class="react-tabs__tab react-tabs__tab--selected"
                    data-rttab="true"
                    id="tab:r0:0"
                    role="tab"
                    tabindex="0"
                  >
                    Windows (Winget)
                  </li>
                  <li
                    aria-controls="panel:r0:1"
                    aria-disabled="false"
                    aria-selected="false"
                    class="react-tabs__tab"
                    data-rttab="true"
                    id="tab:r0:1"
                    role="tab"
                  >
                    macOS (Homebrew)
                  </li>
                  <li
                    aria-controls="panel:r0:2"
                    aria-disabled="false"
                    aria-selected="false"
                    class="react-tabs__tab"
                    data-rttab="true"
                    id="tab:r0:2"
                    role="tab"
                  >
                    Linux (RPM/DEB)
                  </li>
                </ul>
                <div
                  aria-labelledby="tab:r0:0"
                  class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                  id="panel:r0:0"
                  role="tabpanel"
                >
                  <div>
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Install the latest version
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget install 
                        </span>
                        EclipseAdoptium.Temurin.17.JDK
                      </code>
                    </pre>
                    <br />
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Install a different version
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget install 
                        </span>
                        EclipseAdoptium.Temurin.11.JDK
                      </code>
                    </pre>
                    <br />
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Upgrade the Winget package
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget upgrade 
                        </span>
                        EclipseAdoptium.Temurin.17.JDK
                      </code>
                    </pre>
                    <br />
                    <pre
                      class="shell-box no-highlight"
                    >
                      <div
                        class="shell-box-top"
                      />
                      <code
                        class="shell-box-code"
                      >
                        <span
                          class="install__text__no-select"
                        >
                          # Uninstall the Winget package
                        </span>
                        <br />
                        <span
                          class="install__text__no-select"
                        >
                          $
                        </span>
                        <span
                          class="install-text-command"
                        >
                          winget uninstall 
                        </span>
                        EclipseAdoptium.Temurin.17.JDK
                      </code>
                    </pre>
                    <a
                      class="install__docs-button"
                      href="https://docs.microsoft.com/en-us/windows/package-manager/winget/"
                      target="_blank"
                    >
                      Read documentation
                      <i
                        class="fa fa-external-link fa-xs p-1"
                      />
                    </a>
                  </div>
                </div>
                <div
                  aria-labelledby="tab:r0:1"
                  class="react-tabs__tab-panel"
                  id="panel:r0:1"
                  role="tabpanel"
                />
                <div
                  aria-labelledby="tab:r0:2"
                  class="react-tabs__tab-panel"
                  id="panel:r0:2"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </section>
        <div
          class="asciidoc-content"
        >
          
            
          <p>
            Hello World, this is a 
          </p>
          <pre>
            <code
              class="hljs language-bash"
            >
              <span
                class="hljs-built_in"
              >
                test
              </span>
            </code>
          </pre>
          <p />
          
            
          <table
            class="table table-hover py-2"
          >
            <thead
              class="table-dark"
            >
              <tr>
                <td>
                  Header 1
                </td>
                <td>
                  Header 2
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Cell 1
                </td>
                <td
                  class="icon"
                >
                  Cell 2
                  <i
                    class="fa fa-circle-info fa-xl"
                  />
                </td>
              </tr>
            </tbody>
          </table>
          
            
          <a
            href="https://www.eclipse.org"
            target="_blank"
          >
            Eclipse
            <i
              class="fa fa-external-link fa-xs p-1"
            />
          </a>
          
            
          <i
            class="fab fa-docker"
          />
          
            
          <i
            class="fa fa-check"
          />
          
        
        </div>
      </div>
    </div>
    <hr
      class="m-5"
    />
    <p
      class="h5"
    >
      Contributors
    </p>
    <ul
      class="list m-0"
    >
      <li>
        <a
          class="link"
          href="https://github.com/author1"
          rel="noopener noreferrer"
          style="margin-left: 0px;"
          target="_blank"
          title="author1"
        >
          <img
            alt="author1"
            class="img"
            src="https://github.com/author1.png?size=60"
          />
        </a>
      </li>
      <li>
        <a
          class="link"
          href="https://github.com/author2"
          rel="noopener noreferrer"
          target="_blank"
          title=" author2"
        >
          <img
            alt=" author2"
            class="img"
            src="https://github.com/author2.png?size=60"
          />
        </a>
      </li>
    </ul>
    <div
      class="mx-auto pt-5"
    >
      <span
        class="fw-bold"
      >
        Help us make these docs great!
      </span>
      <br />
      <span>
        All Adoptium docs are open source. See something that's wrong or unclear?
      </span>
      <br />
      <a
        class="btn btn-secondary mt-2"
        href="https://github.com/adoptium/website-v2/edit/main/src/asciidoc-pages/test.adoc"
        rel="noopener noreferrer"
        style="border-color: #0869da; background-color: rgb(246, 248, 250);"
        target="_blank"
      >
        <svg
          fill="currentColor"
          height="18"
          stroke="currentColor"
          stroke-width="0"
          style="margin-right: .3em;"
          viewBox="0 0 512 512"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
          />
        </svg>
        Edit this page
      </a>
    </div>
  </section>
</main>
`;

exports[`Asciidoc pages > renders correctly 1`] = `
<main>
  <title>
    Asciidoc Page title | Adoptium
  </title>
  <meta
    content="Sample Description"
    name="description"
  />
  <meta
    content="Asciidoc Page title | Adoptium"
    name="og:title"
  />
  <meta
    content="Sample Description"
    name="og:description"
  />
  <meta
    content="website"
    name="og:type"
  />
  <meta
    content="https://adoptium.net/images/social-image.png"
    name="og:image"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="@adoptium"
    name="twitter:site"
  />
  <meta
    content="https://adoptium.net/images/social-image.png"
    name="twitter:image"
  />
  <meta
    content="@adoptium"
    name="twitter:creator"
  />
  <meta
    content="Asciidoc Page title | Adoptium"
    name="twitter:title"
  />
  <meta
    content="Sample Description"
    name="twitter:description"
  />
  <link
    href="//www.eclipse.org/eclipse.org-common/themes/solstice/public/stylesheets/vendor/cookieconsent/cookieconsent.min.css"
    rel="stylesheet"
    type="text/css"
  />
  <script
    src="//www.eclipse.org/eclipse.org-common/themes/solstice/public/javascript/vendor/cookieconsent/default.min.js"
  />
  <section
    class="py-5 container"
  >
    <div
      class="asciidoc-container container-adoc"
      id="asciidoc-container"
    >
      <div
        class="asciidoc"
      >
        <h1
          class="pb-4 fw-light text-center"
        >
          Asciidoc Page title
        </h1>
        <div
          class="asciidoc-content"
        >
          
            
          <p>
            Hello World, this is a 
          </p>
          <pre>
            <code
              class="hljs language-bash"
            >
              <span
                class="hljs-built_in"
              >
                test
              </span>
            </code>
          </pre>
          <p />
          
            
          <table
            class="table table-hover py-2"
          >
            <thead
              class="table-dark"
            >
              <tr>
                <td>
                  Header 1
                </td>
                <td>
                  Header 2
                </td>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Cell 1
                </td>
                <td
                  class="icon"
                >
                  Cell 2
                  <i
                    class="fa fa-circle-info fa-xl"
                  />
                </td>
              </tr>
            </tbody>
          </table>
          
            
          <a
            href="https://www.eclipse.org"
            target="_blank"
          >
            Eclipse
            <i
              class="fa fa-external-link fa-xs p-1"
            />
          </a>
          
            
          <i
            class="fab fa-docker"
          />
          
            
          <i
            class="fa fa-check"
          />
          
        
        </div>
      </div>
    </div>
    <hr
      class="m-5"
    />
    <p
      class="h5"
    >
      Contributors
    </p>
    <ul
      class="list m-0"
    >
      <li>
        <a
          class="link"
          href="https://github.com/author1"
          rel="noopener noreferrer"
          style="margin-left: 0px;"
          target="_blank"
          title="author1"
        >
          <img
            alt="author1"
            class="img"
            src="https://github.com/author1.png?size=60"
          />
        </a>
      </li>
      <li>
        <a
          class="link"
          href="https://github.com/author2"
          rel="noopener noreferrer"
          target="_blank"
          title=" author2"
        >
          <img
            alt=" author2"
            class="img"
            src="https://github.com/author2.png?size=60"
          />
        </a>
      </li>
    </ul>
    <div
      class="mx-auto pt-5"
    >
      <span
        class="fw-bold"
      >
        Help us make these docs great!
      </span>
      <br />
      <span>
        All Adoptium docs are open source. See something that's wrong or unclear?
      </span>
      <br />
      <a
        class="btn btn-secondary mt-2"
        href="https://github.com/adoptium/website-v2/edit/main/src/asciidoc-pages/test.adoc"
        rel="noopener noreferrer"
        style="border-color: #0869da; background-color: rgb(246, 248, 250);"
        target="_blank"
      >
        <svg
          fill="currentColor"
          height="18"
          stroke="currentColor"
          stroke-width="0"
          style="margin-right: .3em;"
          viewBox="0 0 512 512"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
          />
        </svg>
        Edit this page
      </a>
    </div>
  </section>
</main>
`;
